# audioswitcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  kaudioswi.json  kaudioswi.notifyrc
src/: runner.cpp  runner.h
